test/libyul/yulSyntaxTests/name_clash_sub_scope_reverse.yul
{
	{
		function g() {}
	}
	function g() {}
}
// ----
// DeclarationError 6052: (7-22='function g() {}'): Function name g already taken in this scope.
